force-app/main/default/objects/FEC_Auto_Intetgrating_Property_Mapping__c/FEC_Auto_Intetgrating_Property_Mapping__c.object-meta.xml
<CustomObject>
    <label>FEC Auto Intetgrating Property Mapping</label>
    <nameField>
        <label>FEC_Auto Intetgrating Property Mapping N</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FECcAuto Intetgrating Property Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>