force-app/main/default/objects/FEC_Auto_Intetgrating_Property_Mapping__c/fields/FEC_Channel__c.field-meta.xml
<CustomField>
    <fullName>FEC_Channel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Channels</label>
    <referenceTo>FEC_Channel__c</referenceTo>
    <relationshipName>Auto_Intetgrating_Property_Mappings</relationshipName>
    <type>Lookup</type>
</CustomField>