force-app/main/default/objects/FEC_Auto_Intetgrating_Property_Mapping__c/fields/FEC_Property_ID_Synced__c.field-meta.xml
<CustomField>
    <fullName>FEC_Property_ID_Synced__c</fullName>
    <label>Property ID Synced</label>
    <length>255</length>
    <type>Text</type>
</CustomField>