force-app/main/default/objects/FEC_Auto_Intetgrating_Property_Mapping__c/fields/FEC_Soure_Property_ID__c.field-meta.xml
<CustomField>
    <fullName>FEC_Soure_Property_ID__c</fullName>
    <label>Soure Property ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>