force-app/main/default/objects/FEC_Auto_Intetgrating_Property_Mapping__c/fields/FEC_Sync_Status__c.field-meta.xml
<CustomField>
    <fullName>FEC_Sync_Status__c</fullName>
    <label>Sync Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>